======================
    ADDED: Chinese Simplified translation
    FIXED: [ 948726 ] problem with ctrl+left from the left panel and ctrl+right from the right panel
    FIXED: extension is separated from the dirname after renaming directories containing '.'
    FIXED: locate does not call kdesu any more
    FIXED: [ 950052 ] synchronizer: the left and right side depends of the active panel
    FIXED: [ 770676 ] krarc does not handle password zips
    FIXED: [ 928746 ] symlinks pointing to directories using fish protocol fail
    FIXED: [ 939214 ] synchronizer, wrong behaviour of compare by content
    FIXED: moving into archives is dangerous. it is disabled (for now at least)
    FIXED: synchronizer gui size policy bugs
    FIXED: [ 934498 ] problem at dropping files into the '..' directory
    FIXED: [ 939612 ] F9 moves file, if new name already exists as directory
    FIXED: krusader does not handle filenames containing '#' character
    FIXED: krusader exits at viewing dvi files (missing arguments from KPart).
    FIXED: drag line remains visible after dropping an URL
    FIXED: panel swapping corrupts ctrl+arrow and alt+arrow
    FIXED: error at dropping URLs containing non-english characters from konqueror
    FIXED: KDE 3.2, right justified tabs bug
    FIXED: dragging over a new tab changes active tab
    FIXED: crash at pressing space on the '..' directory
    UPDATED: Bulgarian translation
    UPDATED: Czech translation
    UPDATED: Dutch translation
    UPDATED: German translation
    UPDATED: Hungarian translation
    UPDATED: Italian translation
    UPDATED: Slovak translation

1.40-beta1
======================   
    ADDED: configuring the colors of the panel
    ADDED: (a bug fix really) ability to "not test archives before unpacking"
    ADDED: new icons (thanks to adios for providing them)
    ADDED: quickmode for mountman. press and HOLD the mountman icon for new functionality
    ADDED: Bulgarian translation (thanks to Milen Ivanov)