@@ -1,5 +1,6 @@
 ======================
     ADDED: Chinese Simplified translation
+    FIXED: [ 951274 ] shift+home and shift+end does not work
     FIXED: [ 948726 ] problem with ctrl+left from the left panel and ctrl+right from the right panel
     FIXED: extension is separated from the dirname after renaming directories containing '.'
     FIXED: locate does not call kdesu any more
